Removed meta and added unity specific

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,6 @@ dlldata.c
 *_p.c
 *_i.h
 *.ilk
-*.meta
 *.obj
 *.pch
 *.pdb
@@ -194,3 +193,21 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
+
+Temp/
+
+Library/
+
+Obj/
+
+*.csproj
+
+*.unityproj
+
+*.sln
+
+*.user
+
+*.userprefs
+
+*.DS_store
